# prototype_ipc

./: .gitignore  .gitmodules  CMakeLists.txt  notes.txt
src/: CMakeLists.txt
src/test1/: CMakeLists.txt  README.md  service_interface.hpp  test1_host.cpp  test1_service.cpp
